<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.android.clinicapp.auth.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InstructionFragment"
        android:background="#ECF1FA">

        <ImageView
            android:id="@+id/logoWelcome"
            android:layout_width="174dp"
            android:layout_height="191dp"
            android:layout_marginVertical="130dp"
            android:layout_marginTop="128dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logoo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text2Welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/welcome"
            android:textColor="#131313"
            android:textSize="@dimen/mid"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoWelcome" />
        <TextView
            android:id="@+id/text3Welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:text="@string/sign_in"
            android:textSize="@dimen/mid"
            android:textColor="#131313"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text2Welcome"  />

        <TextView
            android:id="@+id/text4Welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="#5e899e"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1Welcome" />

        <Button
            android:id="@+id/button2Welcome"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/big"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/big"
            android:background="@drawable/radius"
            android:backgroundTint="#2A2AC0"
            android:text="@string/sign_up"
            android:onClick="@{()->viewModel.navigateToRegistration()}"
            android:textColor="#ffffff"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text4Welcome" />

        <Button
            android:id="@+id/button1Welcome"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/big"
            android:layout_marginTop="40dp"
            android:onClick="@{()->viewModel.navigateToLogin()}"
            android:layout_marginEnd="@dimen/big"
            android:background="@drawable/radius"
            android:backgroundTint="#2A2AC0"
            android:text="@string/sign_in_your_email"
            android:textColor="#f0f8ff"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text3Welcome" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>