<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logInFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signUp"
        android:background="#ECF1FA">

        <ImageView
            android:id="@+id/logoWelcome"
            android:layout_width="181dp"
            android:layout_height="188dp"
            android:layout_marginVertical="130dp"
            android:layout_marginTop="92dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logoo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text2SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#0d2b4e"
            android:textSize="@dimen/mid"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="348dp" />
        <EditText
            android:id="@+id/text5SignUp"
            android:layout_width="385sp"
            android:layout_height="44dp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5sp"
            android:background="@drawable/radius"
            android:hint="@string/name"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.355"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text2SignUp"
            android:autofillHints="no"
            android:padding="@dimen/small"
            android:inputType="text" />
        <EditText
            android:id="@+id/text3SignUp"
            android:layout_width="385sp"
            android:layout_height="44dp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5sp"
            android:background="@drawable/radius"
            android:hint="@string/choose"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.355"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text5SignUp"
            android:autofillHints="no"
            android:padding="@dimen/small"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="385sp"
            android:layout_height="44dp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5sp"
            android:background="@drawable/radius"
            android:hint="@string/example_gmail"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.355"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text3SignUp"
            android:autofillHints="no"
            android:padding="@dimen/small"/>
        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="385sp"
            android:layout_height="44dp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5sp"
            android:background="@drawable/radius"
            android:hint="@string/password"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.355"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            android:autofillHints="no"
            android:padding="@dimen/small"/>

        <Button
            android:id="@+id/button1SignUp"
            android:layout_width="385sp"
            android:layout_height="44dp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5sp"
            android:autofillHints="no"
            android:background="@drawable/radius"
            android:backgroundTint="#5e899e"
            android:ems="10"
            android:text="@string/Continue"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.423"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            app:layout_constraintVertical_bias="0.036" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>