<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.android.clinicapp.auth.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logInFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".logIn"
        android:background="#d3ffce">
        <ImageView
            android:id="@+id/logoWelcome"
            android:layout_width="155dp"
            android:layout_height="154dp"
            android:layout_marginVertical="130dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/text1LogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:text="@string/app_name"
            android:textSize="@dimen/mid"
            android:textColor="#5e899e"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoWelcome" />

        <TextView
            android:id="@+id/text2login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mid"
            android:text="@string/login"
            android:textColor="#0d2b4e"
            android:textSize="@dimen/mid"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1LogIn" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="385sp"
            android:layout_height="44dp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5sp"
            android:background="@drawable/radius"
            android:text="@{viewModel.email}"
            android:hint="@string/example_gmail"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.355"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text2login"
            android:autofillHints="no"
            android:padding="@dimen/small"/>
        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="385sp"
            android:layout_height="44dp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5sp"
            android:background="@drawable/radius"
            android:text="@{viewModel.password}"
            android:hint="@string/password"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.355"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            android:autofillHints="no"
            android:padding="@dimen/small"/>

        <Button
            android:id="@+id/button1LogIn"
            android:layout_width="385sp"
            android:layout_height="44dp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5sp"
            android:autofillHints="no"
            android:background="@drawable/radius"
            android:backgroundTint="#5e899e"
            android:ems="10"
            android:text="@string/Continue"
            android:textSize="20sp"
            android:onClick="@{()->viewModel.login()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.423"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            app:layout_constraintVertical_bias="0.036" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>