<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".doctorDashboard">
    <data>
        <variable
            name="viewModel"
            type="com.example.android.clinicapp.dashboard.DashboardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/background"
        android:background="#ECF1FA">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card1"
            android:layout_width="170sp"
            android:layout_height="300sp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/radius"
            android:clickable="true"
            app:layout_constraintEnd_toStartOf="@+id/card2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints">


            <TextView
                android:id="@+id/doctorText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/appointments"
                android:textAlignment="center"
                android:textColor="#0d2b4e"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="127dp"
                android:layout_height="250dp"
                android:layout_marginStart="22dp"
                android:contentDescription="@string/appointments"
                android:onClick="@{()->viewModel.navigateToDoctorAppointments()}"
                android:src="@drawable/appointment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/doctorText1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card2"
            android:layout_width="172dp"
            android:layout_height="305dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/radius"
            android:clickable="true"
            android:onClick="@{()->viewModel.navigateDoctorToPatients()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/doctorText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/patient"
                android:textAlignment="center"
                android:textColor="#0d2b4e"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="128dp"
                android:layout_height="239dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/patient"
                android:src="@drawable/recordss"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/doctorText2" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card4"
            android:layout_width="170sp"
            android:layout_height="300sp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/radius"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/card3"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/doctorText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="#0d2b4e"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="119dp"
                android:layout_height="260dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/profile"
                android:onClick="@{()->viewModel.navigateToDoctorProfile()}"
                android:src="@drawable/docprofilee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/doctorText4" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card3"
            android:layout_width="170sp"
            android:layout_height="300sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20sp"
            android:background="@drawable/radius"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{()->viewModel.navigateDoctorToForm()}"
            app:layout_constraintEnd_toStartOf="@+id/card4"
            app:layout_constraintTop_toBottomOf="@+id/card1"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/doctorText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/forum"
                android:textAlignment="center"
                android:textColor="#0d2b4e"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="121dp"
                android:layout_height="259dp"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/forum"
                android:src="@drawable/forumm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/doctorText3" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="160dp"
            android:layout_height="41dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/dashboard"
            android:textColor="#0d2b4e"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>